--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <li><a href="https://arxiv.org/abs/1509.00592" target="_blank"><b>Kaon BSM $B$-parameters using improved staggered fermions from $N_f=2+1$ unquenched QCD</b></a></li>
                     <ul>
                         <li>2015-12-22</li>
-                        <li><strong>Benjamin J. Choi</strong>, Yong-Chull Jang, Chulwoo Jung, Hwancheol Jeong, Jangho Kim, Jongjeong Kim, Sunghee Kim, Weonjong Lee, Jaehoon Leem, Jeonghwan Pak, Sungwoo Park, Stephen R. Sharpe and Boram Yoon</li>
+                        <li><strong>Benjamin J. Choi</strong>, Yong-Chull Jang, Chulwoo Jung, Hwancheol Jeong, Jangho Kim, Jongjeong Kim, Sunghee Kim, Weonjong Lee, Jaehoon Leem, Jeonghwan Pak, Sungwoo Park, Stephen R. Sharpe, Boram Yoon</li>
                         <li>
                             We present results for the matrix elements of the additional $\Delta S=2$
                             operators that appear in models of physics beyond the Standard Model (BSM),
