--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
                         <li><a href="https://inspirehep.net/authors/1421094" target="_blank">iNSPIRE-HEP</a></li>
                         <li><a href="https://researchmap.jp/benjaminchoi" target="_blank">Researchmap</a></li>
                         <li><a href="https://saintbenjamin.wordpress.com/" target="_blank">Benjamin Cantabile (Wordpress blog)</a></li>
-                    </ul>                
+                    </ul>
+                    <li>Address</li>
+                    <ul>
+                        <li>Center for Computational Sciences, University of Tsukuba, 1-1-1 Tennodai, Tsukuba, Ibaraki 305-8577, Japan</li>
+                    </ul>
                     <li>Favorite sports team</li>
                     <ul> 
                         <li><a href="https://www.giants.jp/" target="_blank">Yomiuri Giants</a></li>
