--- a/juhee/index.html
+++ b/juhee/index.html
@@ -56,16 +56,16 @@
           <li class="outlined-text">서울대학교 음악대학 대학원 석사 졸업</li>
           <ul class="no-bullets">
             <li class="outlined-text">박세원 교수님 사사</li>
-            <li class="outlined-text">Olivier Messiaen의 가곡 『Poèmes pour MiⅡ』 연구:<br>연주자 입장에서의 분석을 중심으로</li>
+            <li class="outlined-text">Olivier Messiaen의 가곡 『Poèmes pour MiⅡ』 연구: 연주자 입장에서의 분석을 중심으로</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2018</li>
           <ul class="no-bullets">
-            <li class="outlined-text">서울대학교 평생교육원 음악교육 전문지도자 과정<br>(관현악 지휘) 이수</li>
+            <li class="outlined-text">서울대학교 평생교육원 음악교육 전문지도자 과정 (관현악 지휘) 이수</li>
           </ul>      
         <li class="outlined-text-semibig">2020-2021</li>
         <ul class="no-bullets">
-          <li class="outlined-text">오스트리아 빈 시립 음악예술대학교<br>COP (Certificate of Performance)<br>독창과 전문연주자과정 졸업</li>
+          <li class="outlined-text">오스트리아 빈 시립 음악예술대학교 COP (Certificate of Performance) 독창과 전문연주자과정 졸업</li>
           <ul class="no-bullets">
             <li class="outlined-text">Prof. Melba Ramos 사사</li>
           </ul>
@@ -112,14 +112,14 @@
       <ul class="no-bullets">
         <li class="outlined-text-semibig">2006</li>
         <ul class="no-bullets">
-          <li class="outlined-text">프랑스 가곡 연구회 주최<br>프랑스 가곡의 밤</li>
+          <li class="outlined-text">프랑스 가곡 연구회 주최 프랑스 가곡의 밤</li>
           <ul class="no-bullets">
             <li class="outlined-text">모차르트홀</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2008-2009</li>
         <ul class="no-bullets">
-          <li class="outlined-text">서울시오페라단 나눔예술공연<br>『Rigoletto(리골레토)』<br>주역 ‘Gilda(질다)’</li>
+          <li class="outlined-text">서울시오페라단 나눔예술공연 『Rigoletto(리골레토)』 주역 ‘Gilda(질다)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">양천구민회관</li>
             <li class="outlined-text">경성고등학교</li>
@@ -138,43 +138,43 @@
         </ul>
         <li class="outlined-text-semibig">2008</li>
         <ul class="no-bullets">
-          <li class="outlined-text">평택 멜로우 클라리넷 앙상블 정기공연<br>소프라노 협연</li>
+          <li class="outlined-text">평택 멜로우 클라리넷 앙상블 정기공연 소프라노 협연</li>
           <ul class="no-bullets">
             <li class="outlined-text">평택 남부문예회관 대공연장</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2009</li>
         <ul class="no-bullets">
-          <li class="outlined-text">서울시립교향악단 정명훈 지휘 마스터피스 시리즈 콘서트<br>『La Traviata(춘희)』 Concert Version <br> 조역 ‘Annina(안니나)’</li>
+          <li class="outlined-text">서울시립교향악단 정명훈 지휘 마스터피스 시리즈 콘서트 『La Traviata(춘희)』 Concert Version 조역 ‘Annina(안니나)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">세종문화회관 대극장</li>
           </ul>
-          <li class="outlined-text">부암아트홀 가곡시리즈 Ⅲ: <br>파리앙상블 프랑스 가곡 “Messiaen (메시앙)”</li>
+          <li class="outlined-text">부암아트홀 가곡시리즈 Ⅲ: 파리앙상블 프랑스 가곡 “Messiaen (메시앙)”</li>
           <ul class="no-bullets">
             <li class="outlined-text">부암아트홀</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2010</li>
         <ul class="no-bullets">
-          <li class="outlined-text">프랑스 가곡연구회 주최<br>제 31회 대학생을 위한 프랑스 가곡의 밤</li>
+          <li class="outlined-text">프랑스 가곡연구회 주최 제 31회 대학생을 위한 프랑스 가곡의 밤</li>
           <ul class="no-bullets">
             <li class="outlined-text">명동성당 꼬스트홀</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2011</li>
         <ul class="no-bullets">
-          <li class="outlined-text">서울시오페라단 정기오페라<br>『La Traviata(춘희)』<br>조역 ‘Annina(안니나)’</li>
+          <li class="outlined-text">서울시오페라단 정기오페라 『La Traviata(춘희)』 조역 ‘Annina(안니나)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">세종문화회관 대극장</li>
           </ul>
-          <li class="outlined-text">강남심포니 오케스트라<br>출향문화예술인 지휘자 서현석 초청 공연<br>소프라노 협연</li>
+          <li class="outlined-text">출향문화예술인 강남심포니 오케스트라 지휘자 서현석 초청 공연 소프라노 협연</li>
           <ul class="no-bullets">
             <li class="outlined-text">이천아트홀 대공연장</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2012</li>
         <ul class="no-bullets">
-          <li class="outlined-text">대학로 오페라 페스티벌<br>『La Traviata(춘희)』<br>주역 ‘Violetta(비올레타)’</li>
+          <li class="outlined-text">대학로 오페라 페스티벌 『La Traviata(춘희)』 주역 ‘Violetta(비올레타)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">대학로 스타시티극장</li>
           </ul>
@@ -182,50 +182,50 @@
         </ul>
         <li class="outlined-text-semibig">2013</li>
         <ul class="no-bullets">
-          <li class="outlined-text">금호아시아나문화재단 주최<br>제 28차 금호 영아티스트 콘서트<br>오디션 합격 독창회</li>
+          <li class="outlined-text">금호아시아나문화재단 주최 제 28차 금호 영아티스트 콘서트 오디션 합격 독창회</li>
           <ul class="no-bullets">
             <li class="outlined-text">금호아트홀</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2014</li>  
         <ul class="no-bullets">
-          <li class="outlined-text">파리앙상블 제 6회 정기연주회<br>“Fauré(포레)” 가곡 연주</li>
+          <li class="outlined-text">파리앙상블 제 6회 정기연주회 “Fauré(포레)” 가곡 연주</li>
           <ul class="no-bullets">
             <li class="outlined-text">성결대 홍대실홀</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2015</li>  
         <ul class="no-bullets">
-          <li class="outlined-text">햇사레 합창단 주최<br>제 2회 장호원 읍민과 함께하는 송년음악회<br>소프라노 협연</li>
+          <li class="outlined-text">햇사레 합창단 주최 제 2회 장호원 읍민과 함께하는 송년음악회 소프라노 협연</li>
           <ul class="no-bullets">
             <li class="outlined-text">장호원 청미도서관 1층 공연장</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2016</li>
         <ul class="no-bullets">
-          <li class="outlined-text">파리앙상블 제 7회 정기연주회<br>“Fauré(포레)” 가곡 Ⅱ 연주</li>
+          <li class="outlined-text">파리앙상블 제 7회 정기연주회 “Fauré(포레)” 가곡 Ⅱ 연주</li>
           <ul class="no-bullets">
             <li class="outlined-text">예술의전당 리사이틀홀</li>
           </ul>
-          <li class="outlined-text">제 138회 양정분의 작은음악회<br>오페라 아리아의 밤 연주</li>
+          <li class="outlined-text">제 138회 양정분의 작은음악회 오페라 아리아의 밤 연주</li>
           <ul class="no-bullets">
             <li class="outlined-text">이천 양정분 산부인과 2층 로비</li>
           </ul>
-          <li class="outlined-text">성원교회 교과서음악회 오페라 갈라 콘서트:<br>『La Traviata(춘희)』 ‘Violetta(비올레타)’,<br>『La Bohème(라보엠)』 ‘Musetta(무젯타)’</li>
+          <li class="outlined-text">성원교회 교과서음악회 오페라 갈라 콘서트:<br>『La Traviata(춘희)』 ‘Violetta(비올레타)’<br>『La Bohème(라보엠)』 ‘Musetta(무젯타)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">서울성원교회</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2017</li>    
         <ul class="no-bullets">
-          <li class="outlined-text">파리앙상블 제 8회 정기연주회<br>‘Duparc(뒤파르크)’ 가곡 연주</li>
+          <li class="outlined-text">파리앙상블 제 8회 정기연주회 ‘Duparc(뒤파르크)’ 가곡 연주</li>
           <ul class="no-bullets">
             <li class="outlined-text">예술의전당 리사이틀홀</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2019-2020</li>
         <ul class="no-bullets">
-          <li class="outlined-text">길오페라 『아버지 제르몽』<br>주역 ‘Violetta(비올레타)’</li>
+          <li class="outlined-text">길오페라 『아버지 제르몽』 주역 ‘Violetta(비올레타)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">인천 플레이캠퍼스</li>
             <li class="outlined-text">부평아트센터 해누리극장</li>
@@ -235,7 +235,7 @@
         </ul>
         <li class="outlined-text-semibig">2021</li>  
         <ul class="no-bullets">
-          <li class="outlined-text">제 27회 뮤지콘 작곡발표회<br>쇤베르크 ‘달에 홀린 피에로’ 중 제 7번 연주</li>
+          <li class="outlined-text">제 27회 뮤지콘 작곡발표회 쇤베르크 ‘달에 홀린 피에로’ 중 제 7번 연주</li>
           <ul class="no-bullets">
             <li class="outlined-text">부산예술회관 전시실</li>
           </ul>
@@ -246,15 +246,15 @@
         </ul>
         <li class="outlined-text-semibig">2022</li> 
         <ul class="no-bullets">
-          <li class="outlined-text">봄꽃 음악제<br>제 2회 단석음악회</li>
+          <li class="outlined-text">봄꽃 음악제 제 2회 단석음악회</li>
           <ul class="no-bullets">
             <li class="outlined-text">양평 단석교회</li>
           </ul>
-          <li class="outlined-text">서울예술가곡연구회<br>제 68회 정기연주회</li>
+          <li class="outlined-text">서울예술가곡연구회 제 68회 정기연주회</li>
           <ul class="no-bullets">
             <li class="outlined-text">예술의전당 리사이틀홀</li>
           </ul>
-          <li class="outlined-text">Real Stimme 독일예술가곡연구회<br>제 8회 정기연주회</li>
+          <li class="outlined-text">Real Stimme 독일예술가곡연구회 제 8회 정기연주회</li>
           <ul class="no-bullets">
             <li class="outlined-text">대전시립 연정국악원 작은마당</li>
           </ul>
@@ -262,22 +262,22 @@
           <ul class="no-bullets">
             <li class="outlined-text">영등포산업선교회</li>
           </ul>
-          <li class="outlined-text">스칼라오페라 주최 콘서트<br>오페라 『Rigoletto(리골레토)』<br>주역 ‘Gilda(질다)’</li>
+          <li class="outlined-text">스칼라오페라 주최 콘서트 오페라 『Rigoletto(리골레토)』 주역 ‘Gilda(질다)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">인천문화예술회관 대공연장</li>
           </ul>
         </ul>
         <li class="outlined-text-semibig">2023</li>    
         <ul class="no-bullets">
-          <li class="outlined-text">서울예술가곡연구회<br>한국가곡시리즈</li>
+          <li class="outlined-text">서울예술가곡연구회 한국가곡 시리즈</li>
           <ul class="no-bullets">
             <li class="outlined-text">양평 국수교회 드림터</li>
           </ul>
-          <li class="outlined-text">제2회 더예인앙상블<br>정기연주회 협연</li>
+          <li class="outlined-text">제2회 더예인앙상블 정기연주회 협연</li>
           <ul class="no-bullets">
             <li class="outlined-text">대전예술의전당 앙상블홀</li>
           </ul>
-          <li class="outlined-text">Real Stimme 독일예술가곡연구회<br>제9회 정기연주회</li>
+          <li class="outlined-text">Real Stimme 독일예술가곡연구회 제9회 정기연주회</li>
           <ul class="no-bullets">
             <li class="outlined-text">대전시립연정국악원 작은마당</li>
           </ul>
@@ -285,7 +285,7 @@
           <ul class="no-bullets">
             <li class="outlined-text">영산아트홀</li>
           </ul>
-          <li class="outlined-text">세종오페라<br>『아버지 제르몽』<br>주역 ‘Violetta(비올레타)’</li>
+          <li class="outlined-text">세종오페라 『아버지 제르몽』 주역 ‘Violetta(비올레타)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">BOK아트센터</li>
           </ul>
@@ -296,11 +296,11 @@
           <ul class="no-bullets">
             <li class="outlined-text">그랜드 하얏트 산수홀</li>
           </ul>
-          <li class="outlined-text">서울예술가곡연구회 제72회 정기연주회<br>“바로크 이탈리아 여행” 연주</li>
+          <li class="outlined-text">서울예술가곡연구회 제72회 정기연주회 “바로크 이탈리아 여행” 연주</li>
           <ul class="no-bullets">
             <li class="outlined-text">금호아트홀 연세</li>
           </ul>
-          <li class="outlined-text">Real Stimme 제10회 정기연주회<br>“세계현대예술가곡축제” 연주</li>
+          <li class="outlined-text">Real Stimme 제10회 정기연주회 “세계현대예술가곡축제” 연주</li>
           <ul class="no-bullets">
             <li class="outlined-text">대전예술의전당 앙상블홀</li>
           </ul>
