--- a/juhee/index.html
+++ b/juhee/index.html
@@ -23,12 +23,12 @@
     </ul>
   </header>
   <main>
-    <div class="menus" id="home">
+    <div class="menus word-break" id="home">
       <h1 class="outlined-text-big">Soprano Juhee Choi</h1>
     </div>
     <br><br><br>
-    <h1 class="outlined-text-semibig">Currently I am</h1>
-    <ul class="no-bullets">
+    <h1 class="outlined-text-semibig word-break">Currently I am</h1>
+    <ul class="no-bullets word-break">
       <li class="outlined-text">침례신학대학교 평생교육원 지도교수</li>
       <li class="outlined-text">계원예술고등학교 실기강사</li>
       <li class="outlined-text">을지로교회 할렐루야찬양대, 마리아찬양대, 갈렙찬양대 지휘</li>
@@ -38,7 +38,7 @@
       <li class="outlined-text">전문연주자로 활동중</li>
     </ul>
     <br><br><br>
-    <div class="menus" id="edu">
+    <div class="menus word-break" id="edu">
       <h1 class="outlined-text-semibig">Education</h1>
       <ul class="no-bullets">
         <li class="outlined-text-semibig">2004-2008</li>        
@@ -70,7 +70,7 @@
       </ul>
     </div>
     <br><br><br>
-    <div class="menus" id="honor">
+    <div class="menus word-break" id="honor">
       <h1 class="outlined-text-semibig">Honors</h1>
       <ul class="no-bullets">
         <li class="outlined-text-semibig">1999</li>
@@ -104,7 +104,7 @@
       </ul>
     </div>
     <br><br><br>
-    <div class="menus" id="perf">
+    <div class="menus word-break" id="perf">
       <h1 class="outlined-text-semibig">Performances</h1>
       <ul class="no-bullets">
         <li class="outlined-text-semibig">2006</li>
@@ -124,7 +124,7 @@
         </ul>
         <li class="outlined-text-semibig">2007-2010</li>
         <ul class="no-bullets">
-          <li class="outlined-text">서울시오페라단 정기오페라<br>『Un Ballo in Maschera(가면무도회)』<br>『La Traviata(춘희)』<br>『La Forza del Destino(운명의 힘)』<br>『Cavalleria Rusticana(카발레리아 루스티카나)』<br>『Manon Lescaut(마농 레스코)』<br>정기공연 및 초청공연 합창<br></li>
+          <li class="outlined-text">서울시오페라단 정기오페라 『Un Ballo in Maschera(가면무도회)』, 『La Traviata(춘희)』, 『La Forza del Destino(운명의 힘)』, 『Cavalleria Rusticana(카발레리아 루스티카나)』, 『Manon Lescaut(마농 레스코)』 정기공연 및 초청공연 합창<br></li>
           <ul class="no-bullets">
             <li class="outlined-text">세종문화회관 대극장</li>
             <li class="outlined-text">울산 현대예술관</li>
@@ -208,7 +208,7 @@
           <ul class="no-bullets">
             <li class="outlined-text">이천 양정분 산부인과 2층 로비</li>
           </ul>
-          <li class="outlined-text">성원교회 교과서음악회 오페라 갈라 콘서트:<br>『La Traviata(춘희)』 ‘Violetta(비올레타)’<br>『La Bohème(라보엠)』 ‘Musetta(무젯타)’</li>
+          <li class="outlined-text">성원교회 교과서음악회 오페라 갈라 콘서트: 『La Traviata(춘희)』 ‘Violetta(비올레타)’, 『La Bohème(라보엠)』 ‘Musetta(무젯타)’</li>
           <ul class="no-bullets">
             <li class="outlined-text">서울성원교회</li>
           </ul>
