--- a/juhee/index.html
+++ b/juhee/index.html
@@ -27,7 +27,7 @@
       <h1 class="outlined-text-big">Soprano Juhee Choi</h1>
     </div>
     <br><br><br>
-    <h1 class="outlined-text-semibig word-break">Currently I am</h1>
+    <h1 class="outlined-text-semibig">Currently I am</h1>
     <ul class="no-bullets word-break">
       <li class="outlined-text">침례신학대학교 평생교육원 지도교수</li>
       <li class="outlined-text">계원예술고등학교 실기강사</li>
@@ -77,8 +77,7 @@
         <ul class="no-bullets">
           <li class="outlined-text">제21회 이천시 학생예능종합발표대회 우수상</li>
           <li class="outlined-text">한국예술인총연합회 이천시지부 주최 제2회 이천 학생음악경연대회 금상</li>
-          <li class="outlined-text">한국예술문화단체총연합회 이천시지부 주최 이천 도자기축제기념</li>
-          <li class="outlined-text">제1회 전국 음악경연대회 동상</li>
+          <li class="outlined-text">한국예술문화단체총연합회 이천시지부 주최 이천 도자기축제기념 제1회 전국 음악경연대회 동상</li>
         </ul>
         <li class="outlined-text-semibig">2000</li>
         <ul class="no-bullets">
