--- a/juhee/index.html
+++ b/juhee/index.html
@@ -306,7 +306,7 @@
     <br><br><br><br><br>
   </main>
   <footer>
-    <p class="outlined-text">&copy; 2024 Sop. Juhee Choi. All rights reserved.</p>
+    <!-- <p class="outlined-text">&copy; 2024 Sop. Juhee Choi. All rights reserved.</p> -->
     <div class="icon-container">
       <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank">
         <i class="fab fa-youtube"></i>
@@ -322,7 +322,13 @@
   <script>
     function toggleMenu() {
         const menu = document.querySelector('.menu');
-        menu.classList.toggle('open'); // open 클래스를 토글하여 메뉴를 보이게/숨기게 함
+        menu.classList.toggle('open');
+        const menuItems = document.querySelectorAll('.menu a');
+                menuItems.forEach(item => {
+                    item.addEventListener('click', () => {
+                        menu.classList.remove('open');
+                    });
+                });        
     }
   </script>
 </body>
