--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="outlined-text-semibig"><a href="#edu">Education</a></li>
                 <li class="outlined-text-semibig"><a href="#academic">Experience</a></li>
                 <li class="outlined-text-semibig"><a href="#honor">Honors</a></li>
-                <li class="outlined-text-semibig"><a href="#talk">Talks</a></li>
+                <li class="outlined-text-semibig"><a href="#talk">Presentations</a></li>
                 <li class="outlined-text-semibig"><a href="#publication">Publications</a></li>
                 <li class="outlined-text-semibig"><a href="#links">Links</a></li>
             </ul>
@@ -67,6 +67,8 @@
                         <li>
                             E-mail: Please click <a href="https://orcid.org/0000-0002-5438-5490" target="_blank">ORCiD&nbsp;<i class="fab fa-orcid"></i></a> and use the "Verified email addresses" therein.
                         </li>
+                        <li>Member of <a href="https://www.jps.or.jp/" target="_blank">the Physical Society of Japan (日本物理学会)</a> since Sep. 2024</li>
+                        <li>Member of <a href="https://www.jps.or.jp/" target="_blank">the Korean Physical Society (韓国物理学会)</a> since Feb. 2016</li>
                         <li><a href="https://inspirehep.net/authors/1421094" target="_blank">iNSPIRE-HEP</a></li>
                         <li><a href="https://researchmap.jp/benjaminchoi" target="_blank">Researchmap</a></li>
                         <li>
@@ -204,7 +206,7 @@
                 </ul>
             </div>
             <div class="menus" id="talk">
-                <h3 class="outlined-text-big">Talks</h3>
+                <h3 class="outlined-text-big">Presentations</h3>
                 <div id="talk-container" class="xml-content"></div>
             </div>
             <div class="menus" id="publication">
