--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             E-mail: Please click <a href="https://orcid.org/0000-0002-5438-5490" target="_blank">ORCiD&nbsp;<i class="fab fa-orcid"></i></a> and use the "Verified email addresses" therein.
                         </li>
                         <li>Member of <a href="https://www.jps.or.jp/" target="_blank">the Physical Society of Japan (日本物理学会)</a> since Sep. 2024</li>
-                        <li>Member of <a href="https://www.jps.or.jp/" target="_blank">the Korean Physical Society (韓国物理学会)</a> since Feb. 2016</li>
+                        <li>Member of <a href="https://www.kps.or.kr/e_index.php" target="_blank">the Korean Physical Society (韓国物理学会)</a> since Feb. 2016</li>
                         <li><a href="https://inspirehep.net/authors/1421094" target="_blank">iNSPIRE-HEP</a></li>
                         <li><a href="https://researchmap.jp/benjaminchoi" target="_blank">Researchmap</a></li>
                         <li>
