juhee major update

--- a/juhee/index.html
+++ b/juhee/index.html
@@ -25,285 +25,26 @@
   <main>
     <div class="menus word-break" id="home">
       <h1 class="outlined-text-big">Soprano Juhee Choi</h1>
+      <br><br>
+      <h1 class="outlined-text-semibig">Currently I am</h1>
+      <div id="bio-j-container" class="xml-content"></div>
     </div>
-    <br><br><br>
-    <h1 class="outlined-text-semibig">Currently I am</h1>
-    <ul class="no-bullets word-break">
-      <li class="outlined-text">침례신학대학교 평생교육원 지도교수</li>
-      <li class="outlined-text">계원예술고등학교 실기강사</li>
-      <li class="outlined-text">을지로교회 할렐루야찬양대, 마리아찬양대, 갈렙찬양대 지휘</li>
-      <li class="outlined-text">서울예술가곡연구회 정회원</li>
-      <li class="outlined-text">Real Stimme (독일예술가곡연구회) 정회원</li>
-      <li class="outlined-text">길오페라 단원</li>
-      <li class="outlined-text">전문연주자로 활동중</li>
-    </ul>
-    <br><br><br>
+    <br><br>
     <div class="menus word-break" id="edu">
       <h1 class="outlined-text-semibig">Education</h1>
-      <ul class="no-bullets">
-        <li class="outlined-text-semibig">2004-2008</li>        
-        <ul class="no-bullets">
-          <li class="outlined-text">서울대학교 음악대학 성악과 졸업</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">이승현, 이영화, 김정아, 박세원 교수님 사사</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2008-2010</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">서울대학교 음악대학 대학원 석사 졸업</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">박세원 교수님 사사</li>
-            <li class="outlined-text">Olivier Messiaen의 가곡 『Poèmes pour MiⅡ』 연구: 연주자 입장에서의 분석을 중심으로</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2018</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">서울대학교 평생교육원 음악교육 전문지도자 과정 (관현악 지휘) 이수</li>
-          </ul>      
-        <li class="outlined-text-semibig">2020-2021</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">오스트리아 빈 시립 음악예술대학교 COP (Certificate of Performance) 독창과 전문연주자과정 졸업</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">Prof. Melba Ramos 사사</li>
-          </ul>
-        </ul>
-      </ul>
+      <div id="edu-j-container" class="xml-content"></div>
     </div>
-    <br><br><br>
+    <br><br>
     <div class="menus word-break" id="honor">
       <h1 class="outlined-text-semibig">Honors</h1>
-      <ul class="no-bullets">
-        <li class="outlined-text-semibig">1999</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">제21회 이천시 학생예능종합발표대회 우수상</li>
-          <li class="outlined-text">한국예술인총연합회 이천시지부 주최 제2회 이천 학생음악경연대회 금상</li>
-          <li class="outlined-text">한국예술문화단체총연합회 이천시지부 주최 이천 도자기축제기념 제1회 전국 음악경연대회 동상</li>
-        </ul>
-        <li class="outlined-text-semibig">2000</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">제22회 이천시 학생예능종합발표대회 최우수상</li>
-          <li class="outlined-text">한국청소년진흥재단 주최 경기도 청소년종합예술제 장려상</li>
-        </ul>
-        <li class="outlined-text-semibig">2001</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">한미청소년문화재단 주최 제2회 한미 전국콩쿨 장려상</li>
-        </ul>
-        <li class="outlined-text-semibig">2002</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">주간음악세계신문 콩쿨 최우수상</li>
-        </ul>
-        <li class="outlined-text-semibig">2003</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">이천시 청소년종합예술제 우수상</li>
-        </ul>
-        <li class="outlined-text-semibig">2009</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">프랑스가곡연구회 주최 제8회 프랑스가곡콩쿨 1위</li>
-        </ul>
-      </ul>
+      <div id="honor-j-container" class="xml-content"></div>
     </div>
-    <br><br><br>
+    <br><br>
     <div class="menus word-break" id="perf">
       <h1 class="outlined-text-semibig">Performances</h1>
-      <ul class="no-bullets">
-        <li class="outlined-text-semibig">2006</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">프랑스 가곡 연구회 주최 프랑스 가곡의 밤</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">모차르트홀</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2008-2009</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">서울시오페라단 나눔예술공연 『Rigoletto(리골레토)』 주역 ‘Gilda(질다)’</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">양천구민회관</li>
-            <li class="outlined-text">경성고등학교</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2007-2010</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">서울시오페라단 정기오페라 『Un Ballo in Maschera(가면무도회)』, 『La Traviata(춘희)』, 『La Forza del Destino(운명의 힘)』, 『Cavalleria Rusticana(카발레리아 루스티카나)』, 『Manon Lescaut(마농 레스코)』 정기공연 및 초청공연 합창<br></li>
-          <ul class="no-bullets">
-            <li class="outlined-text">세종문화회관 대극장</li>
-            <li class="outlined-text">울산 현대예술관</li>
-            <li class="outlined-text">의정부 예술의전당</li>
-            <li class="outlined-text">노원문화예술회관</li>
-            <li class="outlined-text">서울광장 상설무대</li>
-          </ul>            
-        </ul>
-        <li class="outlined-text-semibig">2008</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">평택 멜로우 클라리넷 앙상블 정기공연 소프라노 협연</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">평택 남부문예회관 대공연장</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2009</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">서울시립교향악단 정명훈 지휘 마스터피스 시리즈 콘서트 『La Traviata(춘희)』 Concert Version 조역 ‘Annina(안니나)’</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">세종문화회관 대극장</li>
-          </ul>
-          <li class="outlined-text">부암아트홀 가곡시리즈 Ⅲ: 파리앙상블 프랑스 가곡 “Messiaen (메시앙)”</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">부암아트홀</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2010</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">프랑스 가곡연구회 주최 제 31회 대학생을 위한 프랑스 가곡의 밤</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">명동성당 꼬스트홀</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2011</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">서울시오페라단 정기오페라 『La Traviata(춘희)』 조역 ‘Annina(안니나)’</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">세종문화회관 대극장</li>
-          </ul>
-          <li class="outlined-text">출향문화예술인 강남심포니 오케스트라 지휘자 서현석 초청 공연 소프라노 협연</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">이천아트홀 대공연장</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2012</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">대학로 오페라 페스티벌 『La Traviata(춘희)』 주역 ‘Violetta(비올레타)’</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">대학로 스타시티극장</li>
-          </ul>
-          <li class="outlined-text">SM Entertainment 발성코치</li>
-        </ul>
-        <li class="outlined-text-semibig">2013</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">금호아시아나문화재단 주최 제 28차 금호 영아티스트 콘서트 오디션 합격 독창회</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">금호아트홀</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2014</li>  
-        <ul class="no-bullets">
-          <li class="outlined-text">파리앙상블 제 6회 정기연주회 “Fauré(포레)” 가곡 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">성결대 홍대실홀</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2015</li>  
-        <ul class="no-bullets">
-          <li class="outlined-text">햇사레 합창단 주최 제 2회 장호원 읍민과 함께하는 송년음악회 소프라노 협연</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">장호원 청미도서관 1층 공연장</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2016</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">파리앙상블 제 7회 정기연주회 “Fauré(포레)” 가곡 Ⅱ 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">예술의전당 리사이틀홀</li>
-          </ul>
-          <li class="outlined-text">제 138회 양정분의 작은음악회 오페라 아리아의 밤 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">이천 양정분 산부인과 2층 로비</li>
-          </ul>
-          <li class="outlined-text">성원교회 교과서음악회 오페라 갈라 콘서트: 『La Traviata(춘희)』 ‘Violetta(비올레타)’, 『La Bohème(라보엠)』 ‘Musetta(무젯타)’</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">서울성원교회</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2017</li>    
-        <ul class="no-bullets">
-          <li class="outlined-text">파리앙상블 제 8회 정기연주회 ‘Duparc(뒤파르크)’ 가곡 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">예술의전당 리사이틀홀</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2019-2020</li>
-        <ul class="no-bullets">
-          <li class="outlined-text">길오페라 『아버지 제르몽』 주역 ‘Violetta(비올레타)’</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">인천 플레이캠퍼스</li>
-            <li class="outlined-text">부평아트센터 해누리극장</li>
-            <li class="outlined-text">인천학생교육문화회관</li>
-            <li class="outlined-text">다락소극장</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2021</li>  
-        <ul class="no-bullets">
-          <li class="outlined-text">제 27회 뮤지콘 작곡발표회 쇤베르크 ‘달에 홀린 피에로’ 중 제 7번 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">부산예술회관 전시실</li>
-          </ul>
-          <li class="outlined-text">단트리오 정기연주회 & 가을음악회 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">양평 단석교회</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2022</li> 
-        <ul class="no-bullets">
-          <li class="outlined-text">봄꽃 음악제 제 2회 단석음악회</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">양평 단석교회</li>
-          </ul>
-          <li class="outlined-text">서울예술가곡연구회 제 68회 정기연주회</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">예술의전당 리사이틀홀</li>
-          </ul>
-          <li class="outlined-text">Real Stimme 독일예술가곡연구회 제 8회 정기연주회</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">대전시립 연정국악원 작은마당</li>
-          </ul>
-          <li class="outlined-text">평화여성회 25주년 기념행사 초청 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">영등포산업선교회</li>
-          </ul>
-          <li class="outlined-text">스칼라오페라 주최 콘서트 오페라 『Rigoletto(리골레토)』 주역 ‘Gilda(질다)’</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">인천문화예술회관 대공연장</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2023</li>    
-        <ul class="no-bullets">
-          <li class="outlined-text">서울예술가곡연구회 한국가곡 시리즈</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">양평 국수교회 드림터</li>
-          </ul>
-          <li class="outlined-text">제2회 더예인앙상블 정기연주회 협연</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">대전예술의전당 앙상블홀</li>
-          </ul>
-          <li class="outlined-text">Real Stimme 독일예술가곡연구회 제9회 정기연주회</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">대전시립연정국악원 작은마당</li>
-          </ul>
-          <li class="outlined-text">소프라노 최주희 귀국독창회</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">영산아트홀</li>
-          </ul>
-          <li class="outlined-text">세종오페라 『아버지 제르몽』 주역 ‘Violetta(비올레타)’</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">BOK아트센터</li>
-          </ul>
-        </ul>
-        <li class="outlined-text-semibig">2024</li>       
-        <ul class="no-bullets">
-          <li class="outlined-text">M컬쳐스 20주년 살롱콘서트</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">그랜드 하얏트 산수홀</li>
-          </ul>
-          <li class="outlined-text">서울예술가곡연구회 제72회 정기연주회 “바로크 이탈리아 여행” 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">금호아트홀 연세</li>
-          </ul>
-          <li class="outlined-text">Real Stimme 제10회 정기연주회 “세계현대예술가곡축제” 연주</li>
-          <ul class="no-bullets">
-            <li class="outlined-text">대전예술의전당 앙상블홀</li>
-          </ul>
-        </ul>
-      </ul>    
+      <div id="perf-container" class="xml-content"></div>
     </div>
-    <br><br><br><br><br>
+    <br><br><br><br>
   </main>
   <footer>
     <!-- <p class="outlined-text">&copy; 2024 Sop. Juhee Choi. All rights reserved.</p> -->
@@ -330,6 +71,36 @@
                     });
                 });        
     }
+    async function loadAndRenderXML(xmlUrl, xslUrl, containerId) {
+      try {
+              const xmlResponse = await fetch(xmlUrl);
+              if (!xmlResponse.ok) throw new Error(`Failed to load XML: ${xmlResponse.statusText}`);
+              const xmlText = await xmlResponse.text();
+              const parser = new DOMParser();
+              const xmlDoc = parser.parseFromString(xmlText, "application/xml");
+
+              const xslResponse = await fetch(xslUrl);
+              if (!xslResponse.ok) throw new Error(`Failed to load XSL: ${xslResponse.statusText}`);
+              const xslText = await xslResponse.text();
+              const xslDoc = parser.parseFromString(xslText, "application/xml");
+
+              const xsltProcessor = new XSLTProcessor();
+              xsltProcessor.importStylesheet(xslDoc);
+
+              const resultDocument = xsltProcessor.transformToFragment(xmlDoc, document);
+
+              const container = document.getElementById(containerId);
+              container.innerHTML = '';
+              container.appendChild(resultDocument);
+          } catch (error) {
+              console.error('Error rendering XML:', error);
+              document.getElementById(containerId).textContent = 'Error loading and rendering XML.';
+          }
+    }
+    loadAndRenderXML('bio_j_local.xml', 'bio_j.xsl', 'bio-j-container');
+    loadAndRenderXML('edu_j_local.xml', 'perf.xsl', 'edu-j-container');
+    loadAndRenderXML('honor_j_local.xml', 'honor_j.xsl', 'honor-j-container');
+    loadAndRenderXML('perf_local.xml', 'perf.xsl', 'perf-container');
   </script>
 </body>
 </html>
