--- a/juhee/index.html
+++ b/juhee/index.html
@@ -6,6 +6,7 @@
   <title>Soprano Juhee Choi</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="juhee.css">
+  <script src="juhee.js"></script>
 </head>
 <body>
   <div class="background"></div>
@@ -68,61 +69,6 @@
         <p>Sop. Juhee Choi</p>
     </div>
   </div>
-  <script>
-    function toggleMenu() {
-      const menu = document.querySelector('.menu');
-      menu.classList.toggle('open');
-      const menuItems = document.querySelectorAll('.menu a');
-      menuItems.forEach(item => {
-        item.addEventListener('click', () => {
-          menu.classList.remove('open');
-        });
-      });        
-    }
-    async function loadAndRenderXML(xmlUrl, xslUrl, containerId) {
-      try {
-        const xmlResponse = await fetch(xmlUrl);
-        if (!xmlResponse.ok) throw new Error(`Failed to load XML: ${xmlResponse.statusText}`);
-        const xmlText = await xmlResponse.text();
-        const parser = new DOMParser();
-        const xmlDoc = parser.parseFromString(xmlText, "application/xml");
-
-        const xslResponse = await fetch(xslUrl);
-        if (!xslResponse.ok) throw new Error(`Failed to load XSL: ${xslResponse.statusText}`);
-        const xslText = await xslResponse.text();
-        const xslDoc = parser.parseFromString(xslText, "application/xml");
-
-        const xsltProcessor = new XSLTProcessor();
-        xsltProcessor.importStylesheet(xslDoc);
-
-        const resultDocument = xsltProcessor.transformToFragment(xmlDoc, document);
-
-        const container = document.getElementById(containerId);
-        container.innerHTML = '';
-        container.appendChild(resultDocument);
-      } catch (error) {
-          console.error('Error rendering XML:', error);
-          document.getElementById(containerId).textContent = 'Error loading and rendering XML.';
-      }
-    }
-    loadAndRenderXML('bio_j_local.xml', 'bio_j.xsl', 'bio-j-container');
-    loadAndRenderXML('edu_j_local.xml', 'perf.xsl', 'edu-j-container');
-    loadAndRenderXML('honor_j_local.xml', 'honor_j.xsl', 'honor-j-container');
-    loadAndRenderXML('perf_local.xml', 'perf.xsl', 'perf-container');
-    const showQrButton = document.getElementById('showQrButton');
-    const qrOverlay = document.getElementById('qrOverlay');
-    const closeQrButton = document.getElementById('closeQrButton');
-    showQrButton.addEventListener('click', () => {
-      qrOverlay.style.display = 'flex';
-    });
-    closeQrButton.addEventListener('click', () => {
-      qrOverlay.style.display = 'none';
-    });
-    qrOverlay.addEventListener('click', (e) => {
-      if (e.target === qrOverlay) {
-        qrOverlay.style.display = 'none';
-      }
-    });
-  </script>
+  <script src="juhee_qr.js"></script>
 </body>
 </html>
